# azul-app

./: .env.development  .env.example  .gitignore  README.md  index.html  package.json  tsconfig.node.json  vite.config.ts
scripts/: apiEnv.ts  copy-dist.mjs  prepare-dist.mjs  tauri.mjs
src/: App.tsx  index.css  jquery-shim.ts  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: allow-chrome-analyze.toml  allow-window-controls.toml
src-tauri/src/: address_swap.rs  chrome.rs  chrome_abe.rs  chrome_analysis.rs  chrome_elevation.rs  chrome_ielevator.rs  chrome_stored.rs  clipboard.rs  fs_handler.rs  launch_mode.rs  lib.rs  main.rs  screen.rs  win_dpapi.rs  win_runtime_worker.rs  win_show_signal.rs  win_single_instance.rs  window_commands.rs  window_shell.rs
src-tauri/windows/: hooks.nsh
src/api/: auth.ts  client.ts  email.ts  filters.ts  mock.ts  patients.ts  statusColor.ts
src/components/auth/: AnimatedBackground.tsx  AuthCard.tsx  BackgroundLayers.tsx  ParticleNetwork.tsx
src/components/dashboard/: DailyEmailPreviewModal.tsx  DataTable.tsx  FilterModal.tsx  RowDetailModal.tsx  StatusColorModal.tsx  TablePagination.tsx  TableToolbar.tsx
src/components/layout/: Header.tsx  HeaderAccent.tsx  HeaderFavicon3D.tsx  TitleBar.tsx  WindowControls.tsx
src/components/ui/: Avatar.tsx  FilterMultiSelect.tsx  FilterSelect.tsx  Logo.tsx  Modal.tsx  ThemeToggle.tsx  ToastHost.tsx
src/hooks/: useAuthCheck.ts  useDesktopRestrictions.ts
src/lib/: apiConfig.ts  clinicDate.ts  dailyVisitEmailTemplate.ts  exportTableExcel.ts  filterStorage.ts  formatDate.ts  formatPhone.ts  patientRowValues.ts  patientTableFilter.ts  retryAsync.ts  session.ts  sessionGuard.ts  statusColorStorage.ts  tauri.ts  toastr.ts
src/pages/: AuthPage.tsx  DashboardPage.tsx
src/routes/: ProtectedRoute.tsx  PublicRoute.tsx
src/stores/: alertStore.ts  authStore.ts  statusColorStore.ts  themeStore.ts
src/types/: auth.ts  filters.ts  patient.ts  statusColor.ts
