[package]
name = "daily-huddle"
version = "0.1.0"
description = "Daily Team Huddle desktop app"
authors = ["Daily Team Huddle"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "daily_huddle_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = { version = "1.0", default-features = false, features = ["std"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
tauri = { version = "2.11.2", features = ["tray-icon"] }
tokio = { version = "1", default-features = false, features = ["sync", "time", "rt-multi-thread", "macros"] }
tokio-tungstenite = { version = "0.26", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tokio-util = { version = "0.7", default-features = false, features = ["rt"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
thiserror = "2"
bytes = "1"
base64 = { version = "0.22", default-features = false, features = ["std"] }
webrtc = "0.17"
openh264 = { version = "0.9", default-features = false, features = ["source"] }

[target.'cfg(windows)'.dependencies]
windows-capture = "2.0"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
panic = "abort"
